Bug 79197 - Unable to add track change comment when cursor is at the end of the tracked change
Summary: Unable to add track change comment when cursor is at the end of the tracked c...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0 target:6.2.1
Keywords:
: 87491 (view as bug list)
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2014-05-24 22:48 UTC by Yousuf Philips (jay) (retired)
Modified: 2019-07-04 12:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Shows the comment option disabled. (33.26 KB, image/jpeg)
2014-05-24 22:48 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-05-24 22:48:20 UTC
Created attachment 99744 [details]
Shows the comment option disabled.

1. Open a blank document
2. Enable track changes with Edit > Changes > Record
3. Type 'What'
4. Select 'What' from left to right with your mouse or keyboard
5. Edit > Changes > Comment is disabled

Doing the selection from right to left will have the 'Comment' option enabled. Tested on Linux Mint with the latest release of 3.6 to 4.2 and 4.3 beta. Also test on 4.3 beta on Windows XP SP3.
Comment 1 Joel Madero 2014-05-24 23:04:03 UTC
Confirmed:
Ubuntu 14.04 x64
LibreOffice 4.2.4.2 release & 4.3 beta1


New
Minor - can slow down professional quality work but not going to prevent it (although a user has to figure out that right to left works fine which can be tedious)
Medium - bumped from low because the workaround is kind of hidden and likely not to be discovered.
Comment 2 QA Administrators 2015-06-08 14:41:51 UTC Comment hidden (obsolete)
Comment 3 Yousuf Philips (jay) (retired) 2015-06-10 12:49:34 UTC
Still present. I believe this issue is a much bigger issue that doesnt only affect track change comments.

Version: 5.1.0.0.alpha1+
Build ID: 782c116b5ac39aef27c3a00f7fc145c9f755e3a3
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-06-09_23:59:00
Comment 4 QA Administrators 2016-09-20 10:00:51 UTC Comment hidden (obsolete)
Comment 5 Timur 2017-04-18 08:04:57 UTC
As Gordo noticed in Bug 90964: track change comment doesn't work if cursor at the end or it is selected by double click or selected from beginning to end (left to right this bug 79197) or Next Change (bug 87491).
Comment 6 QA Administrators 2018-10-01 02:52:53 UTC Comment hidden (obsolete)
Comment 7 László Németh 2019-01-31 13:41:07 UTC
*** Bug 87491 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2019-01-31 17:43:13 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/9cb5b06eea8f0067bb9ddee9f4f1c992eda34a64%5E%21

tdf#79197 enable comment of a selected change

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2019-02-08 14:46:15 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/ada64926dd025a0047d11cd7519f5268f4399ce9%5E%21

tdf#79197 enable comment of a selected change

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.