tdf#79197 enable comment of a selected change

with cursor position at the end of the change,
ie. now using "Next Track Change" not only
select the next track change, but it enables
the icon "Insert Track Change Comment" and the
menu item "Edit->Track Changes->Comment...",
and it's possible to add comments as expected.

Change-Id: I21318e70614d1285dd6fd90d8a7cc707fc0b5757
Reviewed-on: https://gerrit.libreoffice.org/67216
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>